refactor(api)!: migre vers Spring Boot 4.1 et renomme les endpoints REST documentés
Plateforme :
- Spring Boot 4.1 (Spring 7, Security 7, Hibernate 7, Jackson 3), javax -> jakarta
- jjwt 0.12, mysql-connector-j, Lombok gere par Boot, JUnit 5
- SecurityFilterChain (401 sans jeton), CORS configurable
- EntrepriseStatementInspector remplace l'Interceptor Hibernate 5
- sequence hibernate_sequence conservee, MDC entreprise reinitialise a chaque requete
- images Docker Java 21, variable SWAGGER_ENABLED

API :
- prefixe /api/v1, URL REST en francais sans abreviation
- springdoc-openapi 3 remplace springfox : tags, operations, reponses,
  schemas des DTO, authentification bearer et exemples de creation sans id
- correction de la faute findHistoriaueCommandeClient

BREAKING CHANGE: prefixe /api/v1, nouvelles URL REST en francais (voir Swagger),
reponse 401 au lieu de 403 sans jeton.